# awakening

./: .clangd  .gitignore  CMakeLists.txt  cal_angle.py  run.sh  tiaoshi.md  user_bashrc_copy.bash  web.py
Camera/Data/: 041062620094.mvdat
auto_start/: leg.sh  omni.sh  sentry.sh
config/: auto_aim.yaml  camera.yaml  eg.yaml  guess_point.yaml  hero.yaml  leg.yaml  omni.yaml  radar.yaml  rmuc_2026_map_point.yaml  robot.yaml  sentry.yaml  standard.yaml  test.yaml
model/: opt-1208-001.engine
script/: rsync.sh
src/: ascii_banner.hpp  param_deliver.h.in  relink.cpp
src/_rcl/: node.hpp  tf.hpp
src/_rcl/visual/: armor.hpp  armor_target.hpp  arrow.hpp
src/runtime/: auto_aim.cpp  config.hpp  fuck_uav.cpp  livox_v1_driver.cpp  map_edit.cpp  nav.cpp  radar_cal.cpp  radar_cal_lidar.cpp  radar_detect.cpp  radar_detect_backup.cpp  radar_detect_lidar.cpp  sentry.cpp
src/runtime/test/: blind_test.cpp  uvc_detect_test.cpp
src/tasks/auto_aim/: armor_omni.hpp  debug.cpp  debug.hpp  type.hpp
src/tasks/auto_aim/armor_control/: very_aimer.cpp  very_aimer.hpp
src/tasks/auto_aim/armor_detect/: armor_detector.cpp  armor_detector.hpp  armor_infer.cpp  armor_infer.hpp
src/tasks/auto_aim/armor_tracker/: armor_target.cpp  armor_target.hpp  armor_tracker.cpp  armor_tracker.hpp  motion_model.hpp  motion_model_point.hpp
src/tasks/base/: ballistic_trajectory.hpp  common.hpp  packet_typedef.hpp  packet_typedef_receive.hpp  packet_typedef_send.hpp  recorder_player..hpp  robot.hpp  traj.hpp  web.hpp  wheel_odometry.hpp
src/tasks/eyes_of_blind/: common.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  image_preprocessor.cpp  image_preprocessor.hpp
src/tasks/eyes_of_blind/proto/: video_stream.proto
src/tasks/fuck_uav/: detector_cv.cpp  detector_cv.hpp
src/tasks/radar_detect/: car_pool.hpp  detector.cpp  detector.hpp  lidar_location.cpp  lidar_location.hpp  pixel_to_world.hpp  rmuc_2026_map.hpp  target.hpp  tracker.hpp  type.hpp
src/tasks/radar_detect/livox_vi_driver/: fast_crc.hpp  livox_v1_publisher.cpp  livox_v1_publisher.hpp  protocal.hpp
src/tasks/sentry_brain/: static_map.hpp
src/tasks/sentry_brain/rmuc_2026/: dog_mode.cpp  dog_mode.hpp  gobal_state.hpp  home_mode.cpp  home_mode.hpp  map.hpp  mode_base.hpp  mode_factory.hpp
src/utils/: buffer.hpp  logger.hpp  runtime_tf.hpp  semaphore_guard.hpp  signal_guard.hpp  tf.hpp  utils.hpp
src/utils/common/: image.hpp  type_common.hpp
src/utils/cuda/: common.hpp  cvtcolor.cu  cvtcolor.hpp  letter_box.cu  letter_box.hpp
src/utils/drivers/: hik_camera.cpp  hik_camera.hpp  mv_camera.cpp  mv_camera.hpp  serial_driver.hpp  uvc_camera.hpp
src/utils/net_detector/: net_detector_base.hpp
src/utils/net_detector/openvino/: net_detector_openvino.cpp  net_detector_openvino.hpp
src/utils/net_detector/tensorrt/: net_detector_tensorrt.cpp  net_detector_tensorrt.hpp
src/utils/scheduler/: scheduler.hpp
static/css/: style.css
static/js/: chart_logic.js  json_view.js  main.js
templates/: index.html
